--- a/requirements.txt
+++ b/requirements.txt
@@ -34,6 +34,7 @@ pydantic-extra-types==2.10.6
 pydantic-settings==2.11.0
 pydantic_core==2.41.4
 Pygments==2.19.2
+PyJWT==2.10.1
 pytest==8.4.2
 pytest-asyncio==1.2.0
 python-dotenv==1.1.1
