--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ asyncio==4.0.0
 asyncpg==0.30.0
 certifi==2025.10.5
 click==8.3.0
+coverage==7.12.0
 dnspython==2.8.0
 email-validator==2.3.0
 fastapi==0.119.1
@@ -39,6 +40,7 @@ Pygments==2.19.2
 PyJWT==2.10.1
 pytest==8.4.2
 pytest-asyncio==1.2.0
+pytest-cov==7.0.0
 python-dotenv==1.1.1
 python-multipart==0.0.20
 PyYAML==6.0.3
